--- a/admin.html
+++ b/admin.html
@@ -2384,10 +2384,24 @@ function loadProfileData() {
 }
 
 // Logout function
-function logout() {
-  endSession();
-  localStorage.removeItem('driverData');
-  window.location.href = "index.html";
+//function logout() {
+  //endSession();
+  //localStorage.removeItem('driverData');
+  //window.location.href = "index.html";
+//}
+
+  // Enhanced logout function
+function logout(redirectUrl = "index.html") {
+    endSession();
+    
+    // Clear all relevant storage
+    localStorage.removeItem('driverData');
+    sessionStorage.clear();
+    
+    // Redirect after a brief delay
+    setTimeout(() => {
+        window.location.href = redirectUrl;
+    }, 500);
 }
 
 // Loader functions
