--- a/admin.html
+++ b/admin.html
@@ -2384,17 +2384,14 @@ function loadProfileData() {
 //}
 
   // Enhanced logout function
-function logout(redirectUrl = "index.html") {
+function logout() {
     endSession();
     
-    // Clear all relevant storage
-    localStorage.removeItem('driverData');
-    sessionStorage.clear();
+    // Add a query parameter to prevent loop
+    window.location.href = "index.html?logout=true";
     
-    // Redirect after a brief delay
-    setTimeout(() => {
-        window.location.href = redirectUrl;
-    }, 500);
+    // Prevent any further execution
+    throw new Error("Logging out");
 }
 
 // Loader functions
