--- a/index.html
+++ b/index.html
@@ -387,7 +387,18 @@ width: 100%;
   <script src="./js/app.js"></script>
 	<!-- NEW SCRIPT FOR PASSWORD TOGGLE -->
   <script>
-
+// Check for logout parameter
+const urlParams = new URLSearchParams(window.location.search);
+if (urlParams.has('logout')) {
+    // Clear any residual session data
+    endSession();
+    
+    // Remove the logout parameter from URL
+    window.history.replaceState({}, document.title, window.location.pathname);
+    
+    // Show logout message if you want
+    showPopup('Logged Out', 'You have been successfully logged out.');
+}
 
 // Add this to your existing JavaScript
 document.addEventListener('DOMContentLoaded', function() {
