--- a/dashboard.html
+++ b/dashboard.html
@@ -609,18 +609,17 @@ document.addEventListener('click', function(event) {
 document.addEventListener('DOMContentLoaded', function() {
 
 
-  // Enhanced session check
+  // Check session with additional verification
     const sessionDriverData = checkSession();
+    const urlParams = new URLSearchParams(window.location.search);
     
-    if (!sessionDriverData) {
-        // Store current URL to redirect back after login
-        localStorage.setItem('redirectUrl', window.location.pathname);
-        window.location.href = "index.html";
+    if (!sessionDriverData || urlParams.has('logout')) {
+        // Ensure we're not already on the login page
+        if (!window.location.pathname.endsWith('index.html')) {
+            window.location.href = "index.html";
+        }
         return;
     }
-    
-    // Set up session warning
-    setupSessionWarning();
   
   // Fetch pending journeys from Google Sheets web app endpoint
   const driverData = JSON.parse(localStorage.getItem('driverData'));
