--- a/admin.html
+++ b/admin.html
@@ -2387,12 +2387,9 @@ function loadProfileData() {
   // Enhanced logout function
 function logout() {
     endSession();
-    
-    // Add a query parameter to prevent loop
-    window.location.href = "index.html?logout=true";
-    
-    // Prevent any further execution
-    throw new Error("Logging out");
+    // Clear the last active page
+    localStorage.removeItem('lastActivePage');
+    window.location.replace('index.html?logout=true');
 }
 
 // Loader functions
