--- a/admin.html
+++ b/admin.html
@@ -18,8 +18,7 @@
   <style>
 #driverName {
     color: black !important;
-}
-  /* ===== Base Styles ===== */
+}  /* ===== Base Styles ===== */
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
