--- a/admin.html
+++ b/admin.html
@@ -1603,7 +1603,7 @@ input[type="search"]::-webkit-search-cancel-button {
   
 // Initialize on page load
 document.addEventListener('DOMContentLoaded', function() {
-// Check session with additional verification
+/ Check session with additional verification
     const sessionDriverData = checkSession();
     const urlParams = new URLSearchParams(window.location.search);
     
