--- a/admin.html
+++ b/admin.html
@@ -1604,16 +1604,9 @@ input[type="search"]::-webkit-search-cancel-button {
   
 // Initialize on page load
 document.addEventListener('DOMContentLoaded', function() {
-/ Check session with additional verification
-    const sessionDriverData = checkSession();
-    const urlParams = new URLSearchParams(window.location.search);
-    
-    if (!sessionDriverData || urlParams.has('logout')) {
-        // Ensure we're not already on the login page
-        if (!window.location.pathname.endsWith('index.html')) {
-            window.location.href = "index.html";
-        }
-        return;
+// Initialize session protection only on protected pages
+    if (!initSessionProtection()) {
+        return; // Redirect will happen inside initSessionProtection
     }
   
   const driverData = JSON.parse(localStorage.getItem('driverData'));
