--- a/dashboard.html
+++ b/dashboard.html
@@ -611,10 +611,21 @@ document.addEventListener('click', function(event) {
 });
 // Function to load pending journeys when the page loads
 document.addEventListener('DOMContentLoaded', function() {
-// Initialize session protection only on protected pages
-    if (!initSessionProtection()) {
-        return; // Redirect will happen inside initSessionProtection
+// First check session
+    if (!checkSession()) {
+        window.location.href = 'index.html?sessionExpired=true';
+        return;
     }
+
+    // Initialize back button handler
+    initBackButtonHandler();
+
+    // Periodic session check
+    setInterval(() => {
+        if (!checkSession()) {
+            window.location.href = 'index.html?sessionExpired=true';
+        }
+    }, 60000); // Check every minute
   
   // Fetch pending journeys from Google Sheets web app endpoint
   const driverData = JSON.parse(localStorage.getItem('driverData'));
