--- a/admin.html
+++ b/admin.html
@@ -1604,10 +1604,21 @@ input[type="search"]::-webkit-search-cancel-button {
   
 // Initialize on page load
 document.addEventListener('DOMContentLoaded', function() {
-// Initialize session protection only on protected pages
-    if (!initSessionProtection()) {
-        return; // Redirect will happen inside initSessionProtection
+// First check session
+    if (!checkSession()) {
+        window.location.href = 'index.html?sessionExpired=true';
+        return;
     }
+
+    // Initialize back button handler
+    initBackButtonHandler();
+
+    // Periodic session check
+    setInterval(() => {
+        if (!checkSession()) {
+            window.location.href = 'index.html?sessionExpired=true';
+        }
+    }, 60000); // Check every minute
   
   const driverData = JSON.parse(localStorage.getItem('driverData'));
     
