--- a/index.html
+++ b/index.html
@@ -390,8 +390,7 @@ width: 100%;
 // Add this to your existing JavaScript
 document.addEventListener('DOMContentLoaded', function() {
 
-// Clear any session flags when arriving at login page
-    localStorage.removeItem('sessionActive');
+// Clear session when arriving at login page
     endSession();
     
 const toggles = document.querySelectorAll('.password-toggle');
