--- a/admin.html
+++ b/admin.html
@@ -19,7 +19,8 @@
   
 #driverName {
     color: black !important;
-}  /* ===== Base Styles ===== */
+} 
+    /* ===== Base Styles ===== */
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
