--- a/dashboard.html
+++ b/dashboard.html
@@ -611,14 +611,14 @@ document.addEventListener('click', function(event) {
 });
 // Function to load pending journeys when the page loads
 document.addEventListener('DOMContentLoaded', function() {
-// First check session
+// Initialize session check
     if (!checkSession()) {
-        window.location.href = 'index.html?sessionExpired=true';
+        window.location.href = 'index.html';
         return;
     }
-
-    // Initialize back button handler
-    initBackButtonHandler();
+    
+    // Initialize back button handler and store cleanup function
+    const cleanupBackButtonHandler = initBackButtonHandler();
 
     // Periodic session check
     setInterval(() => {
