--- a/admin.html
+++ b/admin.html
@@ -1601,7 +1601,9 @@ input[type="search"]::-webkit-search-cancel-button {
 <script>
 
 
-
+window.addEventListener('popstate', function() {
+    alert('Back button pressed!');
+});
 
   
 // Initialize on page load
