--- a/admin.html
+++ b/admin.html
@@ -1602,7 +1602,9 @@ input[type="search"]::-webkit-search-cancel-button {
   
 // Initialize on page load
 document.addEventListener('DOMContentLoaded', function() {
-  
+
+  // Add back button confirmation
+  setupBackButtonConfirmation();
   const driverData = JSON.parse(localStorage.getItem('driverData'));
     
   if (driverData) {
