--- a/dashboard.html
+++ b/dashboard.html
@@ -612,7 +612,8 @@ document.addEventListener('click', function(event) {
 // Function to load pending journeys when the page loads
 document.addEventListener('DOMContentLoaded', function() {
 
-  
+  // Add back button confirmation
+  setupBackButtonConfirmation();
   // Fetch pending journeys from Google Sheets web app endpoint
   const driverData = JSON.parse(localStorage.getItem('driverData'));
     
