--- a/admin.html
+++ b/admin.html
@@ -2373,9 +2373,15 @@ function loadProfileData() {
   //window.location.href = "index.html";
 //}
 
-  // Enhanced logout function
 function logout() {
-    window.location.href = 'index.html?logout=true';
+  // Clear session data
+  localStorage.removeItem('driverData');
+  
+  // Add a flag to indicate logout
+  sessionStorage.setItem('justLoggedOut', 'true');
+  
+  // Redirect to index.html
+  window.location.href = "index.html";
 }
 
 // Loader functions
