--- a/dashboard.html
+++ b/dashboard.html
@@ -2282,6 +2282,12 @@ class CountdownTimer {
   <footer class="app-footer">
   <p>© 2025 Travel Log App | Developed by <strong>R Sukrudha Ram</strong></p>
 </footer>
+  <script>
+// Initialize back button handling
+document.addEventListener('DOMContentLoaded', function() {
+  setupBackButtonConfirmation();
+});
+</script>
   
 </body>
 </html>
