--- a/dashboard.html
+++ b/dashboard.html
@@ -1578,6 +1578,7 @@ async function submitCompletedJourney() {
   .then(result => {
     console.log("Journey completion result:", result);
     showPopup('Success', 'Journey completed successfully!');
+    showSection('home');
     //location.reload();
   })
   .catch(error => {
