--- a/admin.html
+++ b/admin.html
@@ -1613,9 +1613,13 @@ document.addEventListener('DOMContentLoaded', function() {
     resetLoginForms();
   }
 
-   if (driverData && (window.location.pathname.includes('admin.html') || window.location.pathname.includes('dashboard.html'))) {
-    shouldConfirmNavigation = true;
-    setupBackButtonConfirmation();
+    if (shouldConfirmNavigation()) {
+    setupBackButtonProtection();
+    
+    // Reset timer on any user activity
+    window.addEventListener('click', resetSessionTimer);
+    window.addEventListener('keypress', resetSessionTimer);
+    window.addEventListener('mousemove', resetSessionTimer);
   }
     
   if (driverData) {
