--- a/dashboard.html
+++ b/dashboard.html
@@ -2330,7 +2330,7 @@ function setupAutocomplete(inputId, suggestionsId) {
 
 // Set up for both start and end inputs
 setupAutocomplete("startPoint", "startSuggestions");
-setupAutocomplete("endPoint", "endSuggestions");
+setupAutocomplete("completeEndPoint", "endSuggestions");
 
 // Usage:
 // const timer = new CountdownTimer(activeTimestamp);
