--- a/dashboard.html
+++ b/dashboard.html
@@ -19,16 +19,17 @@
 </head>
   <style>
     .suggestions {
-  position: absolute;
-  background: #fff;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  max-height: 180px;
-  overflow-y: auto;
-  z-index: 1000;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
-  width: calc(100% - 22px); /* match input width minus padding and border */
-  margin-top: 4px;
+      left: 1rem;
+    position: absolute;
+    background: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    max-height: 180px;
+    overflow-y: auto;
+    z-index: 1000;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+    width: calc(100% - 32px);
+    margin-top: -11px;
 }
 
 .suggestion-item {
