--- a/dashboard.html
+++ b/dashboard.html
@@ -1298,9 +1298,18 @@ async function submitServiceEntry() {
 
 // Add this function to generate service ID
 function generateServiceId() {
-  const timestamp = Date.now().toString(36);
-  const random = Math.random().toString(36).substr(2, 5);
-  return `SVC-${timestamp}-${random}`.toUpperCase();
+  try {
+    const response = await fetch(`https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec?action=get-counter&type=Service`);
+    const data = await response.json();
+    if (data.error) throw new Error(data.error);
+    return `SVC-${String(data.counter).padStart(3, '0')}`;
+  } catch (error) {
+    console.error("Error generating service ID:", error);
+    // Fallback to timestamp if counter fails
+    const timestamp = Date.now().toString(36);
+    const random = Math.random().toString(36).substr(2, 5);
+    return `SVC-${timestamp}-${random}`.toUpperCase();
+  }
 }
 
 function showAddFuelForm() {
@@ -2001,9 +2010,18 @@ async function submitFuelEntry() {
 
   
 function generateFuelId() {
-  const timestamp = Date.now().toString(36);
-  const random = Math.random().toString(36).substr(2, 5);
-  return `FUEL-${timestamp}-${random}`.toUpperCase();
+  try {
+    const response = await fetch(`https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec?action=get-counter&type=Fuel`);
+    const data = await response.json();
+    if (data.error) throw new Error(data.error);
+    return `FUEL-${String(data.counter).padStart(3, '0')}`;
+  } catch (error) {
+    console.error("Error generating fuel ID:", error);
+    // Fallback to timestamp if counter fails
+    const timestamp = Date.now().toString(36);
+    const random = Math.random().toString(36).substr(2, 5);
+    return `FUEL-${timestamp}-${random}`.toUpperCase();
+  }
 }
 
 
