--- a/dashboard.html
+++ b/dashboard.html
@@ -439,6 +439,7 @@
     <div id="nextServiceDateContainer" style="display:none;">
       <input type="text" id="nextServiceDate" placeholder="Next Service KM">
     </div>
+    <div id="nextServiceDateError" class="validation-message"></div>
     
     <input type="text" id="serviceWorkshop" placeholder="Workshop Name" required>
      <div id="serviceWorkshopError" class="validation-message"></div>
