--- a/dashboard.html
+++ b/dashboard.html
@@ -2348,8 +2348,11 @@ function setupAutocomplete(inputId, suggestionsId) {
       .then(response => response.json())
       .then(data => {
         suggestions.innerHTML = "";
+        const keralaResults = data.filter(place => 
+      place.address.state === "Kerala"
+    );
 
-        data.forEach(place => {
+        keralaResults.forEach(place => {
           const div = document.createElement("div");
           div.classList.add("suggestion-item");
           div.textContent = place.display_name;
