--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ margin: 0;
 </div>
 
 <div class="request-btn">	
-<button class="btn neon-pulse" onclick="https://forms.gle/otydz62V8N3evMnt6">
+<button class="btn neon-pulse" onclick="window.open('https://forms.gle/otydz62V8N3evMnt6')">
   <span>Travel Request</span>
 </button>
 </div>
