--- a/index.html
+++ b/index.html
@@ -250,9 +250,6 @@ width: 100%;
 }
 
 
-<!-- HTML !-->
-<button class="button-53" role="button">Button 53</button>
-
 /* CSS */
 .button-53 {
   background-color: #3DD1E7;
@@ -436,7 +433,7 @@ width: 100%;
 </div>
 
 <div class="request-btn">	
-<button class="btn button-53" onclick="window.open('https://forms.gle/otydz62V8N3evMnt6')">
+<button class="button-53" onclick="window.open('https://forms.gle/otydz62V8N3evMnt6')">
   <span>Travel Request</span>
 </button>
 </div>
